Avoid overlapping post date

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -525,7 +525,7 @@ body {
 }
 
 .post-content-excerpt {
-    margin: -2vw 0 3vw;
+    margin: 0 0 3vw;
     font-size: 2.2rem;
     line-height: 1.6em;
     color: var(--color-base);
